- Tested and fixed bugs found in restricting ticket visibility by section

--- a/styles/user_admin.css
+++ b/styles/user_admin.css
@@ -1,5 +1,5 @@
 #add_user_div{
-	height: 250px;
+	height: 270px;
 	width: 375px;
 	margin-right: auto;
 	margin-left: auto;
